# motorsim

./: Cargo.toml  README.md
src/: control.rs  main.rs  math.rs  motor.rs  time_mod.rs  ui.rs
src/control/: math.rs  motor.rs  time_mod.rs
